# parascan

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
configs/: config.example.yaml
configs/specs/: awarehealth-api.swagger.yaml  awarehealth-app.swagger.yaml  example.swagger.yaml
src/parascan/: __init__.py  cli.py
src/parascan/core/: auth.py  config.py  db.py  engine.py  fingerprint.py  proxy.py  rate_limiter.py  reporter.py  scope.py  soft404.py  state.py
src/parascan/discovery/: crawler.py  directory_brute.py  graphql_schema.py  openapi.py
src/parascan/payloads/: cmdi.yaml  csrf.yaml  jwt.yaml  redirect.yaml  sqli.yaml  ssrf.yaml  traversal.yaml  xss.yaml  xxe.yaml
src/parascan/scanners/: base.py  cmdi.py  csrf.py  directory_traversal.py  headers.py  idor.py  info_disclosure.py  jwt.py  open_redirect.py  rate_limit.py  sqli.py  ssrf.py  tls.py  xss.py  xxe.py
src/parascan/scanners/graphql/: batch.py  injection.py  introspection.py
src/parascan/web/: app.py
src/parascan/web/templates/: index.html  scan.html
src/parascan/wordlists/: directories.txt
